Refactor: remove inconsistent return status.
